--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
   </head>
 
   <body>
-    <div class="header">
+    <header>
       <h1>Horiseon</h1>
-      <div>
+      <nav>
         <ul>
           <li>
             <a href="#search-engine-optimization">Search Engine Optimization</a>
@@ -23,15 +23,15 @@
             <a href="#social-media-marketing">Social Media Marketing</a>
           </li>
         </ul>
-      </div>
-    </div>
+      </nav>
+    </header>
     <div class="hero"></div>
-    <div class="content">
-      <div class="about" id="search-engine-optimization">
+    <main>
+      <div id="search-engine-optimization">
         <img
           src="./assets/images/search-engine-optimization.jpg"
           class="float-left"
-          alt="A note book displating SEO (search engine optimization"
+          alt="A note book displaying SEO (search engine optimization)"
         />
         <h2>Search Engine Optimization</h2>
         <p>
@@ -41,7 +41,7 @@
           visibility and find the right customers for your business.
         </p>
       </div>
-      <div class="about" id="online-reputation-management">
+      <div id="online-reputation-management">
         <img
           src="./assets/images/online-reputation-management.jpg"
           class="float-right"
@@ -56,7 +56,7 @@
           business.
         </p>
       </div>
-      <div class="about" id="social-media-marketing">
+      <div id="social-media-marketing">
         <img
           src="./assets/images/social-media-marketing.jpg"
           class="float-left"
@@ -70,9 +70,9 @@
           your lead generation.
         </p>
       </div>
-    </div>
-    <div class="benefits">
-      <div class="benefit-contents">
+    </main>
+    <aside>
+      <div>
         <h3>Lead Generation</h3>
         <img src="./assets/images/lead-generation.png" alt="icon" />
         <p>
@@ -80,7 +80,7 @@
           business, bringing customers directly to your website.
         </p>
       </div>
-      <div class="benefit-contents">
+      <div>
         <h3>Brand Awareness</h3>
         <img src="./assets/images/brand-awareness.png" alt="icon" />
         <p>
@@ -88,7 +88,7 @@
           the search ranking and visibility for your business.
         </p>
       </div>
-      <div class="benefit-contents">
+      <div>
         <h3>Cost Management</h3>
         <img src="./assets/images/cost-management.png" alt="icon" />
         <p>
@@ -96,10 +96,10 @@
           costs decrease, and you no longer need to advertise your page.
         </p>
       </div>
-    </div>
-    <div class="footer">
+    </aside>
+    <footer>
       <h4>Made with ❤️️ by Horiseon</h4>
       <p>&copy; 2019 Horiseon Social Solution Services, Inc.</p>
-    </div>
+    </footer>
   </body>
 </html>
