--- a/index.html
+++ b/index.html
@@ -8,8 +8,11 @@
 
   <body>
     <header>
+      <!--Page Header-->
       <h1>Horiseon</h1>
+      <!--Header Title-->
       <nav>
+        <!--Navigation Bar-->
         <ul>
           <li>
             <a href="#search-engine-optimization">Search Engine Optimization</a>
@@ -26,7 +29,9 @@
       </nav>
     </header>
     <div class="hero"></div>
+    <!--Main Image-->
     <main>
+      <!--Left Side Card-->
       <div id="search-engine-optimization">
         <img
           src="./assets/images/search-engine-optimization.jpg"
@@ -72,7 +77,9 @@
       </div>
     </main>
     <aside>
+      <!--Right Side Card-->
       <div>
+        <!--Lead Generation-->
         <h3>Lead Generation</h3>
         <img src="./assets/images/lead-generation.png" alt="icon" />
         <p>
@@ -81,6 +88,7 @@
         </p>
       </div>
       <div>
+        <!--Brand Awareness-->
         <h3>Brand Awareness</h3>
         <img src="./assets/images/brand-awareness.png" alt="icon" />
         <p>
@@ -89,6 +97,7 @@
         </p>
       </div>
       <div>
+        <!--Cost Managment-->
         <h3>Cost Management</h3>
         <img src="./assets/images/cost-management.png" alt="icon" />
         <p>
@@ -98,6 +107,7 @@
       </div>
     </aside>
     <footer>
+      <!--Footer Bottom of Page-->
       <h4>Made with ❤️️ by Horiseon</h4>
       <p>&copy; 2019 Horiseon Social Solution Services, Inc.</p>
     </footer>
